--- a/index.html
+++ b/index.html
@@ -21,6 +21,11 @@
           </nav>
         </div>
       </header>
+      <main class="main">
+        <h2>Cooking something great!!</h2> <br>
+        <h3>Coming soon...</h3>
+
+      </main>
 
 
 
